@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-23T16:24:39Z",
-  "count_outdated" : 290,
-  "uniques_outdated" : 177,
-  "count" : 303,
-  "uniques" : 186,
+  "timestamp" : "2022-08-24T01:55:25Z",
+  "count_outdated" : 295,
+  "uniques_outdated" : 181,
+  "count" : 307,
+  "uniques" : 189,
   "clones" : [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ]
-    },
     {
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 5,
