@@ -1,12 +1,7 @@
 {
-  "count": 13,
-  "uniques": 5,
+  "count": 12,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 5,
